node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: explorer-node # Name of the deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: explorer-node
  template:
    metadata:
      labels:
        app: explorer-node
    spec:
      containers:
        - name: explorer-node # Name of the container
          image: lichfiet/file-explorer-backend:latest # Image name
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
