web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: ClusterIP
  selector:
    app: explorer-web
  ports:
  - name: web
    port: 3001
    targetPort: 3001
